--- a/module-00/ex00/Makefile
+++ b/module-00/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: mgodawat <mgodawat@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/24 13:18:11 by mgodawat          #+#    #+#              #
-#    Updated: 2025/07/24 13:18:58 by mgodawat         ###   ########.fr        #
+#    Updated: 2025/08/05 16:04:18 by mgodawat         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,9 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Iinclude/
 NAME = megaphone
 SRC_DIR = src
 OBJ_DIR = build
-SRCS = $(wildcard $(SRC_DIR)/*.cpp)
+
+SRCS = 	$(SRC_DIR)/megaphone.cpp \
+
 OBJS = $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRCS))
 
 all: $(NAME)
