🚀 updated ex02 finished

--- a/module-00/ex02/Makefile
+++ b/module-00/ex02/Makefile
@@ -1,4 +1,3 @@
-
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
@@ -7,22 +6,23 @@
 #    By: mgodawat <mgodawat@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/23 19:06:47 by mgodawat          #+#    #+#              #
-#    Updated: 2025/07/23 19:09:44 by mgodawat         ###   ########.fr        #
+#    Updated: 2025/08/25 19:18:35 by mgodawat         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -Iinclude/
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = account
 SRC_DIR = src
 OBJ_DIR = build
 
-SRCS =	$(SRC_DIR)/Account.cpp \
+# List the final object files that are needed
+OBJS = $(OBJ_DIR)/Account.o $(OBJ_DIR)/tests.o
 
+# Add the include path for Account.hpp
+CPPFLAGS = -I.
 
-OBJS = $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRCS))
-
+# Add debug flags if DEBUG is set
 ifdef DEBUG
 	CXXFLAGS += -g -fsanitize=address
 endif
@@ -34,10 +34,17 @@ $(NAME): $(OBJS)
 	@$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 	@echo "🚀 Executable '$(NAME)' is ready to launch!"
 
+# Generic rule for compiling .cpp files from the src/ directory
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | $(OBJ_DIR)
 	@echo "⚙️  Compiling $<..."
-	@$(CXX) $(CXXFLAGS) -c $< -o $@
+	@$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $< -o $@
 
+# Specific rule for compiling tests.cpp from the src directory
+$(OBJ_DIR)/tests.o: $(SRC_DIR)/tests.cpp | $(OBJ_DIR)
+	@echo "⚙️  Compiling $<..."
+	@$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $< -o $@
+
+# Rule to create the build directory if it doesn't exist
 $(OBJ_DIR):
 	@mkdir -p $(OBJ_DIR)
 
