--- a/module-01/ex02/Makefile
+++ b/module-01/ex02/Makefile
@@ -1,11 +1,9 @@
-NAME = zombie
+NAME = hithisisbrain
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -I.
 
 SRCS =	main.cpp \
-		zombieHorde.cpp \
-		Zombie.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
