finished cpp-module01

--- a/module-01/ex06/Makefile
+++ b/module-01/ex06/Makefile
@@ -5,17 +5,18 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mgodawat <mgodawat@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/08/26 17:46:24 by mgodawat          #+#    #+#              #
-#    Updated: 2025/08/26 19:14:44 by mgodawat         ###   ########.fr        #
+#    Created: 2025/08/28 11:38:24 by mgodawat          #+#    #+#              #
+#    Updated: 2025/08/30 18:12:03 by mgodawat         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = zombie
+NAME = harlFilter
 
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -I.
 
 SRCS =	main.cpp \
+		Harl.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
 
@@ -32,4 +33,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re⏎
