--- a/module-03/ex03/Makefile
+++ b/module-03/ex03/Makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 
-NAME = FragTrap
+NAME = DiamondTrap
 
 all: $(NAME)
 
