--- a/Lessons/Makefile
+++ b/Lessons/Makefile
@@ -3,7 +3,7 @@ NAME = lessons
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -I.
 
-SRCS =	main.cpp
+SRCS =	InherShallow.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
