--- a/module-05/ex00/Makefile
+++ b/module-05/ex00/Makefile
@@ -7,11 +7,7 @@ OBJ_DIR		= build
 INC_DIR		= include
 
 SRCS		= main.cpp \
-			  AMateria.cpp \
-			  Ice.cpp \
-			  Cure.cpp \
-			  Character.cpp \
-			  MateriaSource.cpp
+			  Bureaucrat.cpp \
 
 OBJS		= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(addprefix $(SRC_DIR)/, $(SRCS)))
 
