Add debug mode and logging to Bureaucrat class
- Introduced a debug target in Makefile to enable debug mode with -DDEBUG flag.
- Replaced standard output statements in Bureaucrat class constructors and destructors with DEBUG_LOG macro for conditional logging.
- Fixed typos in main.cpp output messages for clarity.

--- a/module-05/ex00/Makefile
+++ b/module-05/ex00/Makefile
@@ -23,6 +23,10 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
 	@echo "Compiling $<..."
 	@$(CXX) $(CXXFLAGS) -I$(INC_DIR) -c $< -o $@
 
+debug: CXXFLAGS += -DDEBUG
+debug: all
+	@echo "Debug mode enabled with -DDEBUG flag! 🔍"
+
 clean:
 	@echo "Cleaning object files..."
 	@rm -rf $(OBJ_DIR)
@@ -33,4 +37,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all debug clean fclean re
