--- a/module-05/ex02/Makefile
+++ b/module-05/ex02/Makefile
@@ -6,7 +6,10 @@ SRC_DIR		= src
 OBJ_DIR		= build
 INC_DIR		= include
 
-SRCS		= main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm\
+SRCS		= main.cpp \
+			Bureaucrat.cpp \
+			AForm.cpp \
+			ShrubberyCreationForm.cpp
 
 OBJS		= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(addprefix $(SRC_DIR)/, $(SRCS)))
 
