feat: Add PresidentialPardonForm
- Added PresidentialPardonForm class
- Added FormAlreadySignedException
- Updated Makefile and main.cpp feat: Add PresidentialPardonForm class

--- a/module-05/ex02/Makefile
+++ b/module-05/ex02/Makefile
@@ -10,7 +10,8 @@ SRCS		= main.cpp \
 			Bureaucrat.cpp \
 			AForm.cpp \
 			ShrubberyCreationForm.cpp \
-			RobotomyRequestForm.cpp
+			RobotomyRequestForm.cpp \
+			PresidentialPardonForm.cpp \
 
 OBJS		= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(addprefix $(SRC_DIR)/, $(SRCS)))
 
