``` feat: Add clang-format and configure it
feat: Implement basic debug launch config for zed

feat: Add Makefile and modify CXXFLAGS

feat: Remove the compiled btc file

feat: Add a valid input file for testing

feat: Add BitcoinExchange.hpp and basic struct

feat: Implement BitcoinExchange constructor

feat: Add _findPriceForDate() method

feat: Add main function to execute the program

feat: Implement parseDbFile() method

feat: Implement processInputFile() ```

--- a/module-09/ex00/Makefile
+++ b/module-09/ex00/Makefile
@@ -1,6 +1,6 @@
 NAME		= btc
 CXX			= c++
-CXXFLAGS	= -Wall -Wextra -Werror -std=c++98 -g
+CXXFLAGS 	= -Wall -Wextra -Werror -std=c++98 -g -O0
 
 SRC_DIR		= src
 OBJ_DIR		= build
@@ -10,6 +10,8 @@ SRCS		= main.cpp \
 			BitcoinExchange.cpp \
 			Exception.cpp \
 			parseDbFile.cpp \
+			processInputFile.cpp \
+			findPriceForDate.cpp \
 
 OBJS		= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(addprefix $(SRC_DIR)/, $(SRCS)))
 
