--- a/module-09/ex02/Makefile
+++ b/module-09/ex02/Makefile
@@ -7,7 +7,7 @@ OBJ_DIR		= build
 INC_DIR		= include
 
 SRCS		= main.cpp \
-			ReversePolishNotation.cpp \
+			PmergeMe.cpp \
 
 OBJS		= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(addprefix $(SRC_DIR)/, $(SRCS)))
 
